--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <div class="container border border-secondary" id="gameboard-wrapper">
+        <div class="row">
+          <div class="col-4 border border-primary" id="box-0">""</div>
+          <div class="col-4 border border-primary" id="box-1">""</div>
+          <div class="col-4 border border-primary" id="box-2">""</div>
+          <div class="col-4 border border-primary" id="box-3">""</div>
+          <div class="col-4 border border-primary" id="box-4">""</div>
+          <div class="col-4 border border-primary" id="box-5">""</div>
+          <div class="col-4 border border-primary" id="box-6">""</div>
+          <div class="col-4 border border-primary" id="box-7">""</div>
+          <div class="col-4 border border-primary" id="box-8">""</div>
+        </div>
+      </div>
     </body>
 </html>
