--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <body>
       <div class="container border border-secondary" id="gameboard-wrapper">
         <div class="row">
-          <div class="col-4 border border-primary" id="box-0">""</div>
-          <div class="col-4 border border-primary" id="box-1">""</div>
-          <div class="col-4 border border-primary" id="box-2">""</div>
-          <div class="col-4 border border-primary" id="box-3">""</div>
-          <div class="col-4 border border-primary" id="box-4">""</div>
-          <div class="col-4 border border-primary" id="box-5">""</div>
-          <div class="col-4 border border-primary" id="box-6">""</div>
-          <div class="col-4 border border-primary" id="box-7">""</div>
-          <div class="col-4 border border-primary" id="box-8">""</div>
+          <div class="col-4 box border border-primary" id="box-0">.</div>
+          <div class="col-4 box border border-primary" id="box-1">.</div>
+          <div class="col-4 box border border-primary" id="box-2">.</div>
+          <div class="col-4 box border border-primary" id="box-3">.</div>
+          <div class="col-4 box border border-primary" id="box-4">.</div>
+          <div class="col-4 box border border-primary" id="box-5">.</div>
+          <div class="col-4 box border border-primary" id="box-6">.</div>
+          <div class="col-4 box border border-primary" id="box-7">.</div>
+          <div class="col-4 box border border-primary" id="box-8">.</div>
         </div>
       </div>
     </body>
