--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <div class="container border border-secondary" id="gameboard-wrapper">
+      <div class="container">
         <div class="row">
-          <div class="col-4 box border border-primary" id="box-0">.</div>
-          <div class="col-4 box border border-primary" id="box-1">.</div>
-          <div class="col-4 box border border-primary" id="box-2">.</div>
-          <div class="col-4 box border border-primary" id="box-3">.</div>
-          <div class="col-4 box border border-primary" id="box-4">.</div>
-          <div class="col-4 box border border-primary" id="box-5">.</div>
-          <div class="col-4 box border border-primary" id="box-6">.</div>
-          <div class="col-4 box border border-primary" id="box-7">.</div>
-          <div class="col-4 box border border-primary" id="box-8">.</div>
+          <div class="col-4 box" id="0"></div>
+          <div class="col-4 box" id="1"></div>
+          <div class="col-4 box" id="2"></div>
+        </div>
+        <div class="row">
+          <div class="col-4 box" id="3"></div>
+          <div class="col-4 box" id="4"></div>
+          <div class="col-4 box" id="5"></div>
+        </div>
+        <div class="row">
+          <div class="col-4 box" id="6"></div>
+          <div class="col-4 box" id="7"></div>
+          <div class="col-4 box" id="8"></div>
         </div>
       </div>
     </body>
