--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
           <div class="col-4 box" id="8"></div>
         </div>
       </div>
+      <button>Check for Winner</button>
     </body>
 </html>
