Added message box to replace "win check" button
- Now automatically checks for winner
- Replaced "check win" button with message box

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
           <div class="col-4 box" id="8"></div>
         </div>
       </div>
-      <button>Check for Winner</button>
+      <div id="message"></div>
     </body>
 </html>
