Authentication forms visibility updated
- On load: only view sign-up and sign-in
- After log-in: only view change-pw and sign-Out
- All forms also clear after submit

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </fieldset>
       </form>
 
-      <form id='change-pw' class="authentication">
+      <form id='change-pw' class="authentication hidden">
         <fieldset>
           <legend>Change Password</legend>
           <input type="password" name="passwords[old]" placeholder="Old Password">
@@ -46,7 +46,7 @@
         </fieldset>
       </form>
 
-      <form id="sign-out">
+      <form id="sign-out" class="authentication hidden">
         <fieldset>
           <legend>Sign Out</legend>
           <input type="submit" value="Sign Out">
